k8s/pod.yaml

apiVersion: v1
kind: Pod
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  containers:
  - image: httpd
    name: httpd
    ports:
    - containerPort: 80
  restartPolicy: Always
