k8s/pvc-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pod1-storage
spec:
  volumes:
    - name: pod1-storage
      persistentVolumeClaim:
        claimName: pvc-storage
  containers:
    - name: pv-container
      image: httpd
      volumeMounts:
        - mountPath: "/usr/local/apache2"
          name: pod1-storage
